--- a/install
+++ b/install
@@ -15,10 +15,12 @@ ln -fs "$PWD/update" "module/bin/update"
 mkdir -p "$MODULE_PATH"
 rm -rf "$MODULE_PATH"/*
 cp -a module/ "$MODULE_PATH"
+echo "*" > "$MODULE_PATH/.gitignore"
 echo "Successfully installed module."
 
 # Install template
 "$THEOS/bin/nicify.pl" template 2> /dev/null || error "Failed to nicify template"
 mkdir -p "$TEMPLATE_PATH"
 mv *.nic.tar "$TEMPLATE_PATH/jailed.nic.tar"
+echo "*" > "$TEMPLATE_PATH/.gitignore"
 echo "Successfully installed template."
