--- a/install
+++ b/install
@@ -21,10 +21,10 @@ if [[ ! -d module/$SUBSTRATE ]]; then
 	tar --lzma --strip-components 3 -xf data.tar.lzma "$SUBSTRATE_PATH"
 	rm -rf substrate.deb data.tar.lzma module/lib/CydiaSubstrate*.framework
 	mv CydiaSubstrate.framework "module/$SUBSTRATE"
-	plutil -convert xml1 "module/$SUBSTRATE/Info.plist"
-	rm -f "module/$SUBSTRATE/Libraries/SubstrateInjection.dylib"
 	echo "Successfully installed CydiaSubstrate.framework"
 fi
+plutil -convert binary1 "module/$SUBSTRATE/Info.plist"
+rm -rf "module/$SUBSTRATE/Libraries" "module/$SUBSTRATE/Commands"
 
 # Install module
 ln -fs "$PWD/update" "module/bin/update"
